# UsageWatch

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  generate_icon.py  package-lock.json  package.json  vite.config.ts  widget-concepts.html
.claude/: launch.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: cursor-usage-api.md  widget-click-through-drag.md  widget-theme-mockups-compact.html
docs/bug-audit/: BUG_AUDIT.md  BUG_AUDIT_PROMPT.md  bug-audit-workflow.mjs
mcp-server/: package-lock.json  package.json
mcp-server/src/: api.ts  index.ts  types.ts
scripts/: install-mac.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  widget.json
src-tauri/icons/: icon.icns
src-tauri/src/: credentials_cache.rs  focus_monitor.rs  hook.rs  http_client.rs  http_server.rs  lib.rs  main.rs  models.rs  native_tray.m  polling.rs  process_monitor.rs  styled_tray.rs  tray_renderer.rs  tray_state.rs
src-tauri/src/commands/: browser.rs  claude_accounts.rs  claude_oauth.rs  codex.rs  credentials.rs  cursor.rs  mcp.rs  mod.rs  usage.rs
src/components/: CursorExtrasFriendly.tsx  CursorVisualExtras.tsx  DebugPanel.tsx  HistoryChart.tsx  Popover.tsx  Settings.tsx  SetupWizard.tsx  StatusIndicator.tsx  UsageBar.tsx  WidgetCardConfigurator.tsx
src/context/: AppContext.tsx  WidgetContext.tsx
src/hooks/: useAlertEngine.ts  useBurnRate.ts  useClaudeAccounts.ts  useHistoryRecorder.ts  useMcpManager.ts  useUsageData.ts  useWidgetData.ts  useWidgetStore.ts
src/types/: accounts.ts  mcp.ts  setup.ts  usage.ts  widget.ts
src/utils/: format.ts
src/widget/: MatrixRain.tsx  ProviderBadge.tsx  ReferenceGlassWidget.tsx  TilePalette.tsx  TileRenderer.tsx  WidgetApp.tsx  WidgetCard.tsx  WidgetGrid.tsx  WidgetHeader.tsx  WidgetOverlay.tsx  WidgetPreview.tsx  WidgetWindow.tsx  layout.ts  preview.ts  selectors.ts  themes.ts  widget.css
streamdeck-plugin/: .gitignore  manifest.json  package-lock.json  package.json  tsconfig.json
streamdeck-plugin/scripts/: build.mjs  install.mjs
widget/: index.html  main.tsx
(+35 files in other folders)
