[package]
name = "usagewatch"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "claude_usage_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "cookies"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-store = "2"
tokio = { version = "1", features = ["time", "net", "fs"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
rookie = "0.5"
rusqlite = { version = "0.31", features = ["bundled"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
rdev = "0.5.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "NSAttributedString",
    "NSString",
    "NSRange",
    "NSDictionary",
    "NSObject",
] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    "objc2-core-foundation",
    "NSAttributedString",
    "NSButton",
    "NSColor",
    "NSControl",
    "NSFont",
    "NSResponder",
    "NSStatusBar",
    "NSStatusBarButton",
    "NSStatusItem",
    "NSView",
] }
